k8s/kibana/ingress-contour.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: kibana-ingress
spec:
  ingressClassName: contour    
  virtualhost:
    fqdn: kibana.baway.org.cn        
  routes:
  - conditions:               
    - prefix: /            
    services:                 
    - name: kibana
      port: 5601
